--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,6 @@
 <%= @player_1_name %> vs. <%= @player_2_name %>
 
-<%= @player_1_name %>: 60hp 
+<%= @player_1_name %>: 60hp
 <%= @player_2_name %>: 60hp
+
+<a href ="/attack">Attack</a>
