Chapter 20: add view hit points example to player 2

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,2 @@
 <div style='font-size: 30px; text-align: center;'><p><%=@player1_name%> vs. <%=@player2_name%></p></div>
+<div style='font-size: 20px; text-align: center;'><p><%=@player2_name%> HP: 100</p></div>
