--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,8 @@
-<div style='font-size: 30px; text-align: center;'><p><%=@player1_name%> vs. <%=@player2_name%></p></div>
-<div style='font-size: 20px; text-align: center;'><p><%=@player2_name%> HP: 100</p></div>
+<div style='text-align: center;'>
+  <div style='font-size: 30px;'><p><%=@player1_name%> vs. <%=@player2_name%></p></div>
+  <div style='font-size: 20px;'><p><%=@player2_name%> HP: 100</p></div>
+  <form action="/attack">
+    <p><label for="Attack">
+      <input type="submit" value="Attack"></p></label>
+  </form>
+</div>
