--- a/views/play.erb
+++ b/views/play.erb
@@ -2,8 +2,9 @@
 
 <%=@game.player1.name%>: <%=@game.player1.hp%>HP<br />
 <%=@game.player2.name%>: <%=@game.player2.hp%>HP
-
+<% if !@game.current_player.dead? %>
 <form action="/attack" method="post">
 	<input type="submit" value="attack <%="#{@game.target_player.name}"%>">
 </form>
+<% end %>
 <p><%= @last_move %></p>
