refactoring app, removing pesky global variables

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,4 @@
-<%= @player_1.name %> attacked <%= @player_2.name %>
+<%= @game.player_1.name %> attacked <%= @game.player_2.name %>
+
+<%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp
+<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp
