--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,7 @@
-<%= @player_1.name %> vs. <%= @player_2.name %>
+<%= @game.player_1.name %> vs. <%= @game.player_2.name %>
 
-<%= @player_1.name %>: <%= @player_1.hit_points %>hp
-<%= @player_2.name %>: <%= @player_2.hit_points %>hp
+<%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp
+<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp
 
-<a href ="/attack">Attack</a>
+<a href ='/attack'> Attack </a>
+<!-- <a href ='OK'>OK</a> -->
