switch_turns added

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,4 +1,6 @@
-<%= @game.player_1.name %> attacked <%= @game.player_2.name %>
+<%= @game.current_turn.name %> attacked <%= @game.opponent_of(@game.current_turn).name %>
 
 <%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp
 <%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp
+
+<a href = "/play">OK</a>
