--- a/views/play.erb
+++ b/views/play.erb
@@ -3,5 +3,7 @@
 <%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp
 <%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp
 
+It's <%=@game.current_turn.name%>'s turn!
+
 <a href ='/attack'> Attack </a>
 <!-- <a href ='OK'>OK</a> -->
