Sexy battle, random damage. not just player 1 can win

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,10 @@
-<h1>Battle!</h1>
-<h2>Enter the names</h2>
-<form action="/names" method="post">
-  <input type="text" name="player_1_name" placeholder="Player 1"/>
-  <input type="text" name="player_2_name" placeholder="Player 2"/>
-  <input type="submit" value="Submit" />
-</form>
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+<body style="font-family: 'Josefin Sans', sans-serif; text-align: center;">
+  <h1>Battle!</h1>
+  <h2>Enter the names</h2>
+  <form action="/names" method="post">
+    <input type="text" name="player_1_name" placeholder="Player 1"/>
+    <input type="text" name="player_2_name" placeholder="Player 2"/>
+    <input type="submit" value="Submit" />
+  </form>
+</body>
