CHapter 24:  HP implemented on player 2. Attacking now decreases HP by 10.

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,2 @@
-<div style='font-size: 30px; text-align: center;'><p><%=@player1_name%> attacked <%=@player2_name%></p></div>
+<div style='font-size: 30px; text-align: center;'><p><%=@player1.name%> attacked <%=@player2.name%></p></div>
+<div style='font-size: 20px; text-align: center;'><p><%=@player2.name%> HP: <%=@player2.hit_points%></p></div>
