--- a/views/play.erb
+++ b/views/play.erb
@@ -5,5 +5,6 @@
 
 It's <%=@game.current_turn.name%>'s turn!
 
-<a href ='/attack'> Attack </a>
-<!-- <a href ='OK'>OK</a> -->
+<form action="/attack" method="post">
+  <input type='submit' value='Attack'>
+</form>
