--- a/views/attack.erb
+++ b/views/attack.erb
@@ -3,4 +3,6 @@
 <%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp
 <%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp
 
-<a href = "/play">OK</a>
+<form action="/switch-turns" method='post'>
+  <input type='submit' value='OK'>
+</form>
