--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,17 @@
-<div style='text-align: center;'>
-<h1>Battle!</h1>
-<h2>Sign in to play</h2>
-<form action="/names" method="post">
-  <p><label for="player1_name">
-    Player 1:
-    <input type="text" name="player1_name">
-  </label></p>
-  <p><label for="player2_name">
-    Player 2:
-    <input type="text" name="player2_name">
-  </label></p>
-  <p><input type="submit" value="Submit Players"></p>
-</form>
-</div>
+<body style='text-align: center;'>
+  <h1>Battle!</h1>
+  <h2>Sign in to play</h2>
+  <form action="/names" method="post">
+    <label for="player1_name">
+      Player 1:
+      <input type="text" name="player1_name">
+    </label><br/></br/>
+
+    <label for="player2_name">
+      Player 2:
+      <input type="text" name="player2_name">
+    </label><br/><br/>
+    
+    <input type="submit" value="Submit Players">
+  </form>
+</body>
