--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,2 @@
-<div style='font-size: 30px; text-align: center;'><p><%=@game.player1.name%> attacked <%=@game.player2.name%></p></div>
-<div style='font-size: 20px; text-align: center;'><p><%=@game.player2.name%> HP: <%=@game.player2.hit_points%></p></div>
+<div style='font-size: 30px; text-align: center;'><p><%=@game.attacker.name%> attacked <%=@game.defender.name%></p></div>
+<div style='font-size: 20px; text-align: center;'><p><%=@game.defender.name%> HP: <%=@game.defender.hit_points%></p></div>
