--- a/views/play.erb
+++ b/views/play.erb
@@ -1,8 +1,17 @@
 <div style='text-align: center;'>
   <div style='font-size: 30px;'><p><%=@game.player1.name%> vs. <%=@game.player2.name%></p></div>
+  <div style='font-size: 20px;'><p><%=@game.player1.name%> HP: <%=@game.player1.hit_points%></p></div>
   <div style='font-size: 20px;'><p><%=@game.player2.name%> HP: <%=@game.player2.hit_points%></p></div>
+  <div style='font-size: 20px;'><p><%=@game.attacker.name%>'s Turn to Attack</p></div>
   <form action="/attack">
-    <p><label for="Attack">
-      <input type="submit" value="Attack"></p></label>
+    <p>
+      <label for="Attack">
+      <input type="submit" value="Attack">
+      </label>
+    </p>
+  </form>
+  <form action="" method="GET">
+    <input type="hidden" name="switch" value="true">
+    <button value="Switch Turns" type="submit">Switch Turns</button>
   </form>
 </div>
