--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,11 @@
-<div style='font-size: 30px; text-align: center;'><p><%=@game.attacker.name%> attacked <%=@game.defender.name%></p></div>
-<div style='font-size: 20px; text-align: center;'><p><%=@game.defender.name%> HP: <%=@game.defender.hit_points%></p></div>
+<div style= 'text-align: center;'>
+<div style='font-size: 30px;'><p><%=@game.attacker.name%> attacked <%=@game.defender.name%></p></div>
+<div style='font-size: 20px;'><p><%=@game.defender.name%> HP: <%=@game.defender.hit_points%></p></div>
+<form action="/play">
+  <p>
+    <label for="OK">
+    <input type="submit" value="OK">
+    </label>
+  </p>
+</form>
+</div>
