--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,7 +1,13 @@
 <body style='text-align: center;'>
   <h1><%=@game.player1.name%> vs. <%=@game.player2.name%></h1>
-  <h3><%=@game.target_player.name%> HP: <%=@game.target_player.hit_points%></h3>
-  <p><%=@game.current_player.name%> attacked <%=@game.target_player.name%></p>
+  <h3><%=@target_hp%></h3>
+  <p><%=@last_move%></p>
+
+  <% if @game.auto? %>
+    <h3><%=@next_hp%></h3>
+    <p><%=@next_move%></p>
+  <% end %>
+
   <form action="/attack" method="post">
     <input type="submit" value="OK">
   </form>
