--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,11 +1,9 @@
-<div style= 'text-align: center;'>
-<div style='font-size: 30px;'><p><%=@game.attacker.name%> attacked <%=@game.defender.name%></p></div>
-<div style='font-size: 20px;'><p><%=@game.defender.name%> HP: <%=@game.defender.hit_points%></p></div>
-<form action="/play">
-  <p>
-    <label for="OK">
-    <input type="submit" value="OK">
-    </label>
-  </p>
-</form>
-</div>
+<body style= 'text-align: center;'>
+  <h1><%=@game.attacker.name%> attacked <%=@game.defender.name%></h1>
+  <h2><%=@game.defender.name%> HP: <%=@game.defender.hit_points%></h2>
+  <form action="/play">
+      <label for="OK">
+        <input type="submit" value="OK">
+      </label>
+  </form>
+</body>
