--- a/views/end_game.erb
+++ b/views/end_game.erb
@@ -1,3 +1,3 @@
-<div style='text-align: center;'>
-  <div style='font-size: 20px;'><p><%=@game.loser.name%> has lost the game</p></div>
-</div>
+<body style='text-align: center;'>
+  <h1><%=@game.loser.name%> has lost the game</h1>
+</body>
