--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,6 +1,7 @@
 <body style= 'text-align: center;'>
-  <h1><%=@game.attacker.name%> attacked <%=@game.defender.name%></h1>
+  <h1><%=@game.player1.name%> vs. <%=@game.player2.name%></h1>
   <h2><%=@game.defender.name%> HP: <%=@game.defender.hit_points%></h2>
+  <h3><%=@game.attacker.name%> attacked <%=@game.defender.name%></h3>
   <form action="/switch" method="post">
       <label for="OK">
         <input type="submit" value="OK">
