--- a/views/auto_attack.erb
+++ b/views/auto_attack.erb
@@ -1,8 +1,9 @@
 <body style= 'text-align: center;'>
-  <h1><%=@game.player1.name%> attacked <%=@game.player2.name%></h1>
-  <h1><%=@game.player2.name%> attacked <%=@game.player1.name%></h1>
+  <h1><%=@game.player1.name%> vs. <%=@game.player2.name%></h1>
   <h2><%=@game.player1.name%> HP: <%=@game.player1.hit_points%></h2>
   <h2><%=@game.player2.name%> HP: <%=@game.player2.hit_points%></h2>
+  <h3><%=@game.player1.name%> attacked <%=@game.player2.name%></h3>
+  <h3><%=@game.player2.name%> attacked <%=@game.player1.name%></h3>
   <form action="/switch" method="post">
       <label for="OK">
         <input type="submit" value="OK">
