--- a/views/end_game.erb
+++ b/views/end_game.erb
@@ -1,3 +1,4 @@
-<body style='text-align: center;'>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<body>
   <h1><%=@game.loser.name%> has lost the game</h1>
 </body>
