--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<body style='text-align: center;'>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<body>
   <h1>Battle!</h1>
   <h2>Sign in to play</h2>
   <form action="/names" method="post">
