--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,6 @@
-<body style='text-align: center;'>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+
+<body>
   <h1><%=@game.player1.name%> vs. <%=@game.player2.name%></h1>
   <h2><%=@game.player1.name%> HP: <%=@game.player1.hit_points%></h2>
   <h2><%=@game.player2.name%> HP: <%=@game.player2.hit_points%></h2>
