--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,8 +1,11 @@
-<%= @game.current_turn.name %> attacked <%= @game.current_opponent.name %>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<body>
+  <h1><%= @game.current_turn.name %> attacked <%= @game.current_opponent.name %></h1>
 
-<%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp
-<%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp
-
-<form action="/switch-turns" method='post'>
-  <input type='submit' value='OK'>
-</form>
+  <h3><%= @game.player_1.name %>: <%= @game.player_1.hit_points %>hp</h3>
+  <h3><%= @game.player_2.name %>: <%= @game.player_2.hit_points %>hp</h3>
+  
+  <form action="/switch-turns" method='post'>
+    <input type='submit' value='OK'>
+  </form>
+</body>
