--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -1,1 +1,4 @@
-<%= @game.loser.name %> loses!
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<body>
+  <h1><%= @game.loser.name %> loses!</h1>
+</body>
