--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,20 @@
-<h1>Battle!</h>
-<h2>Sign in to play</h2>
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<body>
+  <h1>Battle!</h1>
+  <h2>Sign in to play</h2>
 
-<form action='/names' method='post'>
-  <label for="player_1_name">
-    Player 1 name
-     <input type ="text" name="player_1_name">
-  </label>
-
-   <label for="player_2_name">
-    Player 2 name
-     <input type ="text" name="player_2_name">
-   </label>
-
- <input type="submit" value="Submit">
-</form>
+  <form action='/names' method='post'>
+    <label for="player_1_name">
+      Player 1
+       <input type ="text" name="player_1_name">
+    </label>
+    <br />
+     <label for="player_2_name">
+      Player 2
+       <input type ="text" name="player_2_name">
+     </label>
+    <br />
+    <br />
+    <input type="submit" value="Submit">
+  </form>
+</body>
