--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,17 @@ body {
   background-image: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/brickwall.png);
 }
 
-
 h1 {
   font-family: 'Londrina Outline', cursive;
   font-size: 300%;
 }
 
-input {
-  padding: 10px;
+input[type="submit"] {
+  font-size: 1.2em;
+    border: 2px solid #000;
+  background-color: transparent;
+    color: #000;
+    cursor: pointer;
+    padding: 14px 24px;
+  margin: 10px;
 }
